loading inital page

--- a/HTML_Bio.html
+++ b/HTML_Bio.html
@@ -54,4 +54,4 @@
 </body>
 
 <!--Bonus Question-->
-<a href="www.linkedin.com">My first link to another page</a>
+<a href="../../../../1/Activities/04-Stu_MyFirst_HTML/Solved/my-first-bonus.html">My First HTML Bonus</a>
