loading inital page

--- a/HTML_Bio.html
+++ b/HTML_Bio.html
@@ -50,8 +50,10 @@
       <td>Dwayne Johnson</td>
       <td>2019</td>
     </tr>
-  </table>
-</body>
+</table>
 
 <!--Bonus Question-->
-<a href="../../../../1/Activities/04-Stu_MyFirst_HTML/Solved/my-first-bonus.html">My First HTML Bonus</a>
+<a href="https://www.google.com/">My First HTML Bonus</a>
+
+</body>
+</html>
